[gd_scene load_steps=3 format=3 uid="uid://88knte4bfrke"]

[ext_resource type="Script" path="res://UI/Menus/SettingsMenu/settings_menu.gd" id="1_bvwuc"]
[ext_resource type="Theme" uid="uid://df7kwgbt1u3iw" path="res://UI/themes/arkanoid_theme.tres" id="1_gafal"]

[node name="SettingsMenu" type="Control" node_paths=PackedStringArray("element_to_focus")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gafal")
script = ExtResource("1_bvwuc")
element_to_focus = NodePath("")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="titleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 80
text = "Settings
"
horizontal_alignment = 1

[node name="MenuContent" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MenuContent"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -354.0
offset_top = -52.0
offset_right = 354.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Difficulty
"

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer"]
layout_mode = 2
text = "VOLUME"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Master"

[node name="masterSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Music"

[node name="musicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Effects"

[node name="effectsSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "UI"

[node name="uiSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="saveBtn" type="Button" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
text = "Save"

[node name="backBtn" type="Button" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Back
"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/masterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/musicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3/effectsSlider" to="." method="_on_effects_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer4/uiSlider" to="." method="_on_ui_slider_value_changed"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/HBoxContainer/saveBtn" to="." method="_on_save_btn_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/HBoxContainer/backBtn" to="." method="_on_back_btn_button_down"]
